--- a/HTMLcode.html
+++ b/HTMLcode.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome!</h1>
+    <h1>Welcome MAMUAN CAFE</h1>
 
 </body>
 <html lang="en">
@@ -85,4 +85,3 @@
 </body>
 </html>
 
-<a href="www.MAMUANcafe.com">My Cafe</a>
